hard-gists/1042778/run.log
=== Docker Run Log for 1042778 ===
Started at: Mi 29. Okt 11:46:33 CET 2025

[2025-10-29 11:46:33] START: Running container for 1042778
[2025-10-29 11:46:34] SUCCESS: Container 1399ae63fcb7acd2a4010150fa56fd50a7d532482c6b9f1eb5d81e591ce5dbca started for 1042778
=== Container logs for 1042778 ===
  File "/snippet.py", line 51
    print 'Dumping:'
    ^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1042778 ===
[2025-10-29 11:46:36] INFO: Container 1399ae63fcb7acd2a4010150fa56fd50a7d532482c6b9f1eb5d81e591ce5dbca has stopped
